bppackaging/src/objects/Sales_Tax_Item__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Sales Tax Items</relationshipLabel>
        <relationshipName>Sales_Tax_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forms_Label__c</fullName>
        <label>Forms Label</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rate</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Labour__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Tax Labour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Misc__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Tax Misc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Parts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Tax Parts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Units__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Tax Units</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Tax Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Category__c</columns>
        <columns>Forms_Label__c</columns>
        <columns>Name__c</columns>
        <columns>Rate__c</columns>
        <columns>Tax_Labour__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>STI-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Tax Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Rate_Should_be_positive</fullName>
        <active>true</active>
        <description>Rate should be zero or more than zero.</description>
        <errorConditionFormula>Rate__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Rate__c</errorDisplayField>
        <errorMessage>Rate should be zero or more than zero.</errorMessage>
    </validationRules>
</CustomObject>